# gravity-beef

./: .gitmodules  BeefProj.toml  BeefSpace.toml  CMakeLists.txt  build.sh  build.ts  build_libs.bat
example/: BeefProj.toml
example/src/: Program.bf
libs/: gravity.lib
libs/windows/: gravity.lib  gravityd.lib
libs/windows/x64/: gravityapi_s.lib  gravityapi_s_d.lib
src/: gravity.bf
